Release 2.0 - Future Development

  * Upgrade rome to 1.5.1 (TIKA-1820)

  * The default LoadErrorHandler is now WARN, to alert you to missing
    parser classes and their dependencies. To keep the old behaviour,
    set your LoadErrorHandler to IGNORE. (TIKA-1805)

  * (Something about more specific parser bundles, plus an overall one)

Release 1.14 - ???

  * Add mime definition and parser for MS Owner File (TIKA-2008).

  * Add mime definition for Windows Media Metafile (TIKA-2004).

  * Add mime definitions of iCal and vCalendar (TIKA-2006).

  * Upgrade to PDFBox 2.0.2 (TIKA-1996).

  * Add configurable maximum threshold for number of events extracted
    from the XMP Media Management Schema in JempboxExtractor (TIKA-1999).

  * Integrate TesseractOCR with full page image rendering for PDFs (TIKA-1994).

  * Add mime detection via Nick C and parser for DBF files (TIKA-1513).

  * Add mime detection and parsers for MSOffice 2003 XML Word
    and Excel formats (TIKA-1958).

  * Extract hyperlinks from PPT, PPTX, XSLX (TIKA-1454).

Release 1.13 - 05/08/2016

  * Upgrade to PDFBox 2.0.1/JempBox 1.8.12 (TIKA-1285/TIKA-1959).
    MAJOR CHANGES in PDFParser:
    * The classic sequential parser is no longer available.
    * Tiff files are no longer extracted by default.  See
      https://pdfbox.apache.org/2.0/dependencies.html#optional-components
      for optional components to process Tiff files.
    * Some truncated/corrupted files that had some content extracted
      with 1.8.x may have no content extracted in 2.0.x (see TIKA-1912).

  * Upgrade MP4 isoparser to 1.1.18 (TIKA-1924).

  * Extract metadata from MP4 videos whether or not the
    PooledTimeSeries parser is available via Aditya Dhulipala
    (TIKA-1844).

  * Fix NPE when trying to get embedded image identifier in
    WordParser (TIKA-1956).

  * Handle per page IOExceptions more robustly in PDFParser (TIKA-1948).

  * Upgrade commons-compress to 1.11 (TIKA-1949).
